add basic navbar with logo

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,3 +8,7 @@ body {
     background-color: $primary !important;
     color: $primary-text !important;
 }
+
+:export {
+    brandPrimary: $primary;
+}
