add main-content section with centering and max-width, Pokedex and PokemonCard column size responsive

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,11 @@ body {
     color: $primary-text !important;
 }
 
+.main-content-section {
+    max-width: 1600px;
+    margin: 40px auto;
+}
+
 :export {
     brandPrimary: $primary;
 }
